0.4.2: Fixing sidescrolling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,7 @@ body {
   margin: 0;
   padding: 0; 
   font-family: var(--mainFont);
+  overflow-x: hidden;
 }
 
 .heroContainer::before {
